feat: create user command for root
